--- a/VideoConverterApi/VideoConverterApi.csproj
+++ b/VideoConverterApi/VideoConverterApi.csproj
@@ -39,11 +39,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="videos\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Update="ffmpeg.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="videos\test.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
